added icons, updated splash page.

--- a/shit-product/html/splash.html
+++ b/shit-product/html/splash.html
@@ -6,11 +6,14 @@
 		<style type="text/css">
 			body{
 				background-color: #454545;
+				background-image:url('pat.100x100.png');
+				background-repeat:repeat;
 			}
 			div.header{
 				margin: 50px 0 0 0;
 			}
 			div.desc{
+				background-color: #454545;
 				font-family: Tahoma, sans-serif;
 				color: #ffffff;
 				font-size: 23px;
@@ -19,6 +22,7 @@
 				width: 750px;
 			}
 			div.chunk{
+				background-color: #454545;
 				font-family: Tahoma, sans-serif;
 				color: #55ddff;
 				font-size: 23px;
@@ -28,6 +32,7 @@
 				width: 750px;
 			}
 			div.foot{
+				background-color: #454545;
 				font-family: Tahoma, sans-serif;
 				color: #999999;
 				font-size: 14px;
@@ -62,7 +67,7 @@
 			Simple. By letting the creators upload a video of themselves rambling on the camera, for as long as they want to.
 			If you know of any game developers living in your area or if you'd like to travel around the world to point webcams at game developers,
 			by all means. Just make sure it's daylight and speak loud and clear! Creators are encouraged to link to their creations (any format).
-			The only rule is the games should be at least 10 years old or more. This helps to reduce drama, scenesterism and spam disguised as self-promotion.
+			<font color= "#2aff80">The only rule is the games should be at least 10 years old or more.</font> This helps to reduce drama, scenesterism and spam disguised as self-promotion.
 		</div>
 		<div class="chunk">
 			Why?
