--- a/shit-product/html/splash.html
+++ b/shit-product/html/splash.html
@@ -64,6 +64,9 @@
 			How?
 		</div>
 		<div class="desc">
+			<object width="640" height="505"><param name="movie" value="http://www.youtube.com/v/z6PdwlpGPK8&amp;hl=en_US&amp;fs=1?rel=0&amp;color1=0x3a3a3a&amp;color2=0x999999"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/z6PdwlpGPK8&amp;hl=en_US&amp;fs=1?rel=0&amp;color1=0x3a3a3a&amp;color2=0x999999" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="640" height="505"></embed></object>
+		</div>
+		<div class="desc">
 			Simple. By letting the creators upload a video of themselves rambling on the camera, for as long as they want to.
 			If you know of any game developers living in your area or if you'd like to travel around the world to point webcams at game developers,
 			by all means. Just make sure it's daylight and speak loud and clear! Creators are encouraged to link to their creations (any format).
