modified splash source to include links.

--- a/shit-product/html/splash.html
+++ b/shit-product/html/splash.html
@@ -4,6 +4,25 @@
 		<title>shit product : sex, drugs and game developers.</title>
 		
 		<style type="text/css">
+		
+			<!--
+			bootstrap is a self publishing node, designed by creators, for creators.
+			bootstrap nodes connect and share with each other.
+			bootstrap is powered by aelua.
+			bootstrap is not a publishing platform for web journalists.
+
+			In bootstrap internets. You do not link to bootstrap. Bootstrap links to you!
+
+			aelua is a lua core and framework compatibile with appengine.
+			aelua and bootstrap are designed and developed by wetgenes.
+			
+			would you like to know more?
+			http://boot-strap.appspot.com
+			http://code.google.com/p/aelua/
+			http://code.google.com/appengine/
+			http://www.wetgenes.com/
+			-->
+			
 			body{
 				background-color: #454545;
 				background-image:url('pat.100x100.png');
