modified splash source.

--- a/shit-product/html/splash.html
+++ b/shit-product/html/splash.html
@@ -6,6 +6,10 @@
 		<style type="text/css">
 		
 			<!--
+			shitproduct wants to connect you to the game developers who make your favourite games.
+			shitproduct uses youtube technology to upload video interviews for you to view at leisure.
+			shitproduct is made by game developers for game developers.
+			
 			bootstrap is a self publishing node, designed by creators, for creators.
 			bootstrap nodes connect and share with each other.
 			bootstrap is powered by aelua.
