some actions are logged

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1093,3 +1093,24 @@ $(document).ready(function() {
 	</div>
 </div>
 
+#profile_acts_header
+<div>
+
+#profile_acts_footer
+</div>
+
+#profile_act
+<div style="position:relative;">
+<span style="width:200px;float:left;"> {ago} ago : </span>
+{html}
+<div style="clear:both;"></div>
+</div>
+
+#act_trade_text
+{name1} traded {count} {offer} for {price} {seek} with {name2}
+#act_trade_html
+{name1} traded {count} {offer} for {price} {seek} with {name2}
+#act_namechange_text
+{name1} changed their name to {name2}
+#act_namechange_html
+{name1} changed their name to {name2}
