--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1114,3 +1114,12 @@ $(document).ready(function() {
 {name1} changed their name to {name2}
 #act_namechange_html
 {name1} changed their name to {name2}
+
+#act_tradeoffer_text
+
+{name1} ofered {count} {offer} for {price} {seek}
+
+#act_tradeoffer_html
+
+{name1} offered {count} {offer} for {price} {seek}
+
