--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -739,6 +739,7 @@ You do not have the {need} bux needed.
 						</div>
 						<div class="pro1d">	
 							<input type="text" name="name" id="profile_name" maxlength="20" value="{player.name}" /><br/>
+							<br/>(a name change costs 1 energy)
 						</div>
 						</form>
 					</div>
@@ -1087,7 +1088,7 @@ $(document).ready(function() {
 			<form action="{url}" method="POST" enctype="multipart/form-data">
 				<input type="hidden" name="victim" value="{victim.id}" /> 
 				<input type="hidden" name="attack" value="rob" /> 
-				<button type="submit" class="button">Perform Robbery!</button>
+				<button type="submit" class="button">Perform Robbery!</button> (costs {fight.energy} energy)
 			</form>		
 		</div>
 	</div>
