--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1088,6 +1088,7 @@ $(document).ready(function() {
 			<form action="{url}" method="POST" enctype="multipart/form-data">
 				<input type="hidden" name="victim" value="{victim.id}" /> 
 				<input type="hidden" name="attack" value="rob" /> 
+				<input type="text" size="100" maxlength="100" name="shout" value="" class="field"/> <br/>
 				<button type="submit" class="button">Perform Robbery!</button> (costs {fight.energy} energy)
 			</form>		
 		</div>
@@ -1155,22 +1156,26 @@ $(document).ready(function() {
 
 #act_robwin_text
 
-{name1} stole {bux} bux from {name2}.
+{name1} stole {bux} bux from {name2} whilst shouting :
+"{shout}"
 {name1} lost {bros1} bros and {sticks1} sticks during the robbery.
 {name2} also lost {bros2} bros and {sticks2} sticks attempting to defend themselves.
 
 #act_robwin_html
 
-<a href="{url}profile/{actor1}">{name1}</a> stole {bux} bux from <a href="{url}profile/{actor2}">{name2}</a>.<br/>
+<a href="{url}profile/{actor1}">{name1}</a> stole {bux} bux from <a href="{url}profile/{actor2}">{name2}</a> whilst shouting :<br/>
+"{shout}"<br/>
 <a href="{url}profile/{actor1}">{name1}</a> lost {bros1} bros and {sticks1} sticks during the robbery.<br/>
 <a href="{url}profile/{actor2}">{name2}</a> also lost {bros2} bros and {sticks2} sticks attempting to defend themselves.<br/>
 
 #act_robfail_text
 
-{name1} tried to steal some bux from {name2}.
+{name1} tried to steal some bux from {name2} whilst shouting :
+"{shout}"
 {name1} lost {bros1} bros and {sticks1} sticks during the attempt.
 
 #act_robfail_html
 
-<a href="{url}profile/{actor1}">{name1}</a> tried to steal some bux from <a href="{url}profile/{actor2}">{name2}</a>.<br/>
+<a href="{url}profile/{actor1}">{name1}</a> tried to steal some bux from <a href="{url}profile/{actor2}">{name2}</a> whilst shouting :<br/>
+"{shout}"<br/>
 <a href="{url}profile/{actor1}">{name1}</a> lost {bros1} bros and {sticks1} sticks during the attempt.<br/>
