tightened graphics in level 2.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -37,12 +37,16 @@
 </div>
 <div class="footer">
 	<div class="cont">
-		<div class="line"></div>
+		<!--<div class="line"></div>-->
 		<div class="desc">
-			{report}
+			<a href="http://hoe-house.appspot.com/">hoe house</a> is a friendly hommage to <a href="http://whorehouse.naken.cc/" target="_new">whore house</a>.<br/>
+				<a href="http://hoe-house.appspot.com/">hoe house</a> is an example <a href="http://code.google.com/p/aelua/" target="_new">aelua</a> app.<br/>
+				<a href="http://code.google.com/p/aelua/" target="_new">aelua</a> is a <a href="http://www.lua.org/" target="_new">lua</a> core and framework compatible with <a href="http://code.google.com/appengine/" target="_new">appengine</a>.<br/>
+				<a href="http://code.google.com/p/aelua/" target="_new">aelua</a> and <a href="http://hoe-house.appspot.com/">hoe house</a> are designed and developed by <a href="http://www.wetgenes.com/" target="_new">wetgenes</a>.
 		</div>
 		<div class="desc1">
-			Send in your bug reports and visit the <a href="http://forum.wetgenes.com" target="_new">Forum</a> for more information.
+			Send in your bug reports and visit the <a href="http://forum.wetgenes.com" target="_new">Forum</a> for more information. <br/>
+			{report}
 		</div>
 	</div>
 </div>
@@ -61,8 +65,10 @@
 				{hoehouse} is a friendly hommage to {whorehouse}.<br/>
 				{hoehouse} is an example {aelua} app.<br/>
 				<br/>
+				<div class="intro2">
 				{aelua} is a {lua} core and framework compatible with {appengine}.<br/>
 				{aelua} and {hoehouse} are designed and developed by {wetgenes}.<br/>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -82,10 +88,10 @@
 #hoe_menu_items
 
 <div class="cont">
-<div class="chunk3">
-<div class="chunk3it">
+<div class="chunk3a">
+<div class="chunk3ait">
 Basic Menu
-<div class="chunk3line"></div>
+<!--<div class="chunk3line"></div>-->
 </div>
 <div class="clear"></div>
 </div>
@@ -291,10 +297,11 @@ $(function(){show_energy("#player_energy",{player.energy},{H.energy_frac},{H.ene
 	<div class="chunk3a">
 		<div class="chunk3ait">
 			Choose the round you want to join.
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>	
+	<div class="illchoose"></div>
 	<div class="chunk8a">	
 	<div class="chunk8b">
 		<div class="game2">
@@ -319,19 +326,19 @@ $(function(){show_energy("#player_energy",{player.energy},{H.energy_frac},{H.ene
 	
 	<div class="clear"></div>
 	<div class="chunk8b">
-		<div class="game3">
+		<div class="game4">
 			Round #	
 		</div>
-		<div class="game">
+		<div class="game5">
 			Players
 		</div>
-		<div class="game">
+		<div class="game5">
 			Speed
 		</div>
-		<div class="game">
+		<div class="game5">
 			Start Date
 		</div>
-		<div class="game">
+		<div class="game5">
 			Time Remaining
 		</div>
 		<div class="clear"></div>
@@ -371,7 +378,7 @@ $(function(){show_energy("#player_energy",{player.energy},{H.energy_frac},{H.ene
 	<div class="chunk3a">
 		<div class="chunk3ait">
 			<img src="/art/list.png" width="30" height="30"> List
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>	
@@ -392,13 +399,13 @@ $(function(){show_energy("#player_energy",{player.energy},{H.energy_frac},{H.ene
 	
 		<div class="clear"></div>
 		<div class="chunk8b">
-			<div class="listat"><img src="/art/name.png"> Player Name</div>
-			<div class="listat"><img src="/art/scoreb.png"> Score</div>
-			<div class="listat"><img src="/art/buxb.png"> Bux</div>
-			<div class="listbt"><img src="/art/hoesb.png"> Hoes</div>
-			<div class="listbt"><img src="/art/housesb.png"> Houses</div>
-			<div class="listbt"><img src="/art/scareb.png"> Bros</div>
-			<div class="listct"><img src="/art/shoutb.png"> Shout</div>
+			<div class="listat1"><img src="/art/name.png"> Player Name</div>
+			<div class="listat1"><img src="/art/scoreb.png"> Score</div>
+			<div class="listat1"><img src="/art/buxb.png"> Bux</div>
+			<div class="listbt1"><img src="/art/hoesb.png"> Hoes</div>
+			<div class="listbt1"><img src="/art/housesb.png"> Houses</div>
+			<div class="listbt1"><img src="/art/scareb.png"> Bros</div>
+			<div class="listct1"><img src="/art/shoutb.png"> Shout</div>
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -427,10 +434,10 @@ $(function(){show_energy("#player_energy",{player.energy},{H.energy_frac},{H.ene
 #player_base
 
 <div class="cont">
-	<div class="chunk3">
-		<div class="chunk3it">
+	<div class="chunk3a">
+		<div class="chunk3ait">
 			<img src="/art/shop.png" width="30" height="30"> Shop
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -644,7 +651,7 @@ Click {action} to {action} this game.
 	<div class="chunk3a">
 		<div class="chunk3ait">
 			<img src="/art/shop.png" width="30" height="30"> Shop
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -713,7 +720,7 @@ You do not have the {need} bux needed.
 	<div class="chunk3a">
 		<div class="chunk3ait">
 			<img src="/art/pro.png" width="30" height="30"> Profile
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>	
@@ -770,7 +777,7 @@ You do not have the {need} bux needed.
 	<div class="chunk3a">
 		<div class="chunk3ait">
 			<img src="/art/pro.png" width="30" height="30"> Profile
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>	
@@ -902,7 +909,7 @@ You do not have the {need} bux needed.
 	<div class="chunk3a">
 		<div class="chunk3ait">
 			<img src="/art/trade.png" width="30" height="30"> Trade
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -1070,7 +1077,7 @@ $(document).ready(function() {
 	<div class="chunk3a">
 		<div class="chunk3ait">
 			<img src="/art/fight.png" width="30" height="30"> Fight
-		<div class="chunk3line"></div>
+		<!--<div class="chunk3line"></div>-->
 		</div>
 		<div class="clear"></div>
 	</div>
