modified "a name change costs 1 energy" to look nicer. well, cleaner.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -746,7 +746,7 @@ You do not have the {need} bux needed.
 						</div>
 						<div class="pro1d">	
 							<input type="text" name="name" id="profile_name" maxlength="20" value="{player.name}" /><br/>
-							<br/>(a name change costs 1 energy)
+							<span style="padding:10px;font-size:14px;"><u>( A name change costs 1 energy. )</u></span>
 						</div>
 						</form>
 					</div>
@@ -1137,7 +1137,7 @@ $(document).ready(function() {
 
 <div class="cont">
 	<div class="chunk6">
-		<div class="alert">
+		<div class="alert2">
 			{html}
 		</div>
 
@@ -1149,7 +1149,7 @@ $(document).ready(function() {
 
 <div class="cont">
 	<div class="chunk6">
-		<div class="alert">
+		<div class="alert2">
 			{html}
 		</div>
 
