fixed logout fixed stick loss by defender in fights

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1221,22 +1221,24 @@ $(document).ready(function() {
 {name1} stole {bux} bux from {name2} shouting :
 Upon leaving, they shouted : "{shout}"
 {name1} lost {bros1} bros and {sticks1} sticks during the robbery.
-{name2} lost {bros2} bros and {sticks2} sticks attempting to defend themselves.
+{name2} lost {bros2} bros and {sticks2} sticks defending themselves.
 
 #act_robwin_html
 <a href="{url}profile/{actor1}">{name1}</a> stole {bux} <img src="/art/buxb.png"> bux from <a href="{url}profile/{actor2}">{name2}</a>. <br/>
 Upon leaving, they <img src="/art/shoutb.png"> shouted : "<span style="color:#00d400"><b>{shout}</b></span>" <br/>
 <a href="{url}profile/{actor1}">{name1}</a> lost {bros1} <img src="/art/bros.png"> bros and {sticks1} <img src="/art/sticksb.png"> sticks during the robbery.<br/>
-<a href="{url}profile/{actor2}">{name2}</a> lost {bros2} <img src="/art/bros.png"> bros and {sticks2} <img src="/art/sticksb.png"> sticks attempting to defend themselves.<br/>
+<a href="{url}profile/{actor2}">{name2}</a> lost {bros2} <img src="/art/bros.png"> bros and {sticks2} <img src="/art/sticksb.png"> sticks defending themselves.<br/>
 
 
 #act_robfail_text
 {name1} failed to steal any bux from {name2}.
 They were last seen shouting : "{shout}"
 {name1} lost {bros1} bros and {sticks1} sticks during the attempt.
+{name2} lost {sticks2} sticks defending themselves.
 
 #act_robfail_html
 <a href="{url}profile/{actor1}">{name1}</a> failed to steal any <img src="/art/buxb.png"> bux from <a href="{url}profile/{actor2}">{name2}</a>. <br/>
 They were last seen <img src="/art/shoutb.png"> shouting : "<span style="color:#ff5555"><b>{shout}</b></span>" <br/>
 <a href="{url}profile/{actor1}">{name1}</a> lost {bros1} <img src="/art/bros.png"> bros and {sticks1} <img src="/art/sticksb.png"> sticks during the attempt.<br/>
+<a href="{url}profile/{actor2}">{name2}</a> lost {sticks2} <img src="/art/sticksb.png"> sticks defending themselves.<br/>
 
